cmake_miniMum_required(VERSION 2.6)
PROJECT(base)
AUX_SOURCE_DIRECTORY(./ SRC_LIST)
SET(LIBRARY_OUTPUT_PATH .)

ADD_DEFINITIONS( -g -W -Wall )

INCLUDE_DIRECTORIES(./ ../ )
LINK_DIRECTORIES( ../slog/ /usr/local/log4cxx/lib/) 

ADD_LIBRARY(base STATIC ${SRC_LIST})
TARGET_LINK_LIBRARIES(base libslog.a)
